# freekick2

./: .gitignore  Changelog  Match.hs  README  SDLUtils.hs  Swos.hs  Test2.hs  freekick2.cabal
share/tactics/: 352.tct  424.tct  433.tct  442.tct  451.tct  532.tct  541.tct
share/teams/: Calcio.team  Dynamo Turku.team  Este.team  FC Orava.team  Fasano.team  Green FC.team  Highland United.team  I Diavoli.team  Jordan United.team  Kippis FC.team  Melfi.team  Nateva.team  Nerazzurri.team  Norman United.team  Owls United.team  PK-128.team  Piove di Sacco.team  Stansted.team  Tottenham Hale.team  Treviso.team  Urhot.team  Waterloo.team
src/: Ball.hs  BinHelpers.hs  CreateTeam.hs  DeriveMod.hs  DrawPitch.hs  Drawing.hs  FVector.hs  Gen.hs  Listings.hs  Main.hs  Match.hs  Player.hs  SDLUtils.hs  SWOSShell.hs  Swos.hs  SwosConv.hs  SwosTactics.hs  SwosToGen.hs  Utils.hs
src/Match/: Ball.hs  DrawPitch.hs  Match.hs  Player.hs  SWOSShell.hs
src/Match/Internal/: AI.hs  Actions.hs  Formation.hs  MatchBase.hs  MatchState.hs
src/Match/State/: AI.hs  Actions.hs  Controls.hs  Formation.hs  MatchBase.hs  MatchState.hs
