Name:           freekick2
Version:        0.0.1
Cabal-Version:  >= 1.6
License:        GPL
License-File:   LICENSE
Author:         Antti Salonen<ajsalonen at gmail dot com>
Maintainer:     Antti Salonen<ajsalonen at gmail dot com>
Copyright:      Antti Salonen 2010
Stability:      Unstable
Homepage:       http://github.com/anttisalonen/freekick2
Category:       Game
Synopsis:       A soccer game
Description:    A soccer game.
Build-type:     Simple

data-files: share/bg.png, share/grass1.png,
            share/DejaVuSans.ttf, share/DejaVuSansMono.ttf

extra-source-files: src/Match.hs, 
                    src/Swos.hs, 
                    src/SDLUtils.hs, 
                    src/Tree.hs

source-repository head
  type:      git
  location:  git://github.com/anttisalonen/freekick2.git

Executable freekick2
  Build-Depends:   base > 3 && < 5, haskell98,
                   OpenGL>=2.1.0.0,
                   mtl>=1.1.0.0,
                   SDL>=0.5.5,
                   EdisonCore>=1.2.1.0,
                   random>=1.0.0.0,
                   FTGL>=1.333,
                   pngload>=0.1,
                   array>=0.3.0.0,
                   directory>=1.0.0.0,
                   binary>=0.5.0.0,
                   filepath>=1.1.0.0,
                   bytestring>=0.9.0.0
  Main-is:         Main.hs
  Hs-Source-Dirs:  src
  Ghc-options:     -Wall -fno-warn-missing-signatures

