Name:           freekick2
Version:        0.0.1
Cabal-Version:  >= 1.6
License:        GPL
License-File:   LICENSE
Author:         Antti Salonen<ajsalonen at gmail dot com>
Maintainer:     Antti Salonen<ajsalonen at gmail dot com>
Copyright:      Antti Salonen 2010
Stability:      Unstable
Homepage:       http://github.com/anttisalonen/freekick2
Category:       Game
Synopsis:       A soccer game
Description:    A soccer game.
Build-type:     Simple

data-files: share/bg.png, 
            share/grass1.png,
            share/DejaVuSans.ttf, share/DejaVuSansMono.ttf,
            share/player1-e.png, share/player1-n.png,
            share/player1-w.png, share/player1-s.png,
            share/player1shadow.png,
            share/ball1.png,
            share/ball1shadow.png,
            share/goal1.png,
            share/goal1shadow.png,
            share/goal2.png,
            share/goal2shadow.png,
            share/tactics/352.tct,
            share/tactics/424.tct,
            share/tactics/433.tct,
            share/tactics/442.tct,
            share/tactics/451.tct,
            share/tactics/532.tct,
            share/tactics/541.tct


extra-source-files: src/Match.hs, 
                    src/Swos.hs, 
                    src/SDLUtils.hs, 
                    src/Drawing.hs, 
                    src/DrawPitch.hs, 
                    src/Tree.hs

source-repository head
  type:      git
  location:  git://github.com/anttisalonen/freekick2.git

Executable freekick2
  Build-Depends:   base > 3 && < 5, haskell98,
                   OpenGL>=2.1.0.0,
                   mtl>=1.1.0.0,
                   SDL>=0.5.5,
                   EdisonCore>=1.2.1.0,
                   random>=1.0.0.0,
                   FTGL>=1.333,
                   pngload>=0.1,
                   array>=0.3.0.0,
                   directory>=1.0.0.0,
                   binary>=0.5.0.0,
                   filepath>=1.1.0.0,
                   template-haskell,
                   containers>=0.3.0.0,
                   bytestring>=0.9.0.0
  Main-is:         Main.hs
  Hs-Source-Dirs:  src
  Ghc-options:     -Wall -fno-warn-missing-signatures
                   -fno-warn-unused-binds

Executable swos2gen
  Build-Depends:   base > 3 && < 5, haskell98,
                   mtl>=1.1.0.0,
                   directory>=1.0.0.0,
                   binary>=0.5.0.0,
                   filepath>=1.1.0.0,
                   containers>=0.3.0.0,
                   bytestring>=0.9.0.0
  Main-is:         SwosToGen.hs
  Hs-Source-Dirs:  src
  Ghc-options:     -Wall -fno-warn-missing-signatures
                   -fno-warn-unused-binds

